--- a/src/style.css
+++ b/src/style.css
@@ -1,143 +1,10 @@
-html {
-    font-size: 16px;
-}
-
-body {
-    padding: 0;
-    margin: 0;
-    font-family: 'Quicksand', sans-serif;
-    font-size: 1.15rem;
+:root {
+    --bs-sans-serif: 'Quicksand', sans-serif;
+    --bs-primary: #1e3a8a;
+    --bs-secondary: #eeeeee;
 }
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Pacifico', sans-serif;
     font-weight: 400;
-    color: #1E3A8A;
-}
-
-h1 {font-size: 2.5rem;}
-h2 {font-size: 2rem;}
-h3 {font-size: 1.75rem;}
-h4 {font-size: 1.5rem;}
-h5 {font-size: 1.25rem;}
-h6 {font-size: 1rem;}
-
-#header {
-    padding: 8px;
-}
-
-#header-heading {
-    display: inline;
-    text-align: center;
-}
-
-#about-me {
-    max-width: 800px;
-    text-align: center;
-    margin: 32px auto;
-    display: flex;
-}
-
-#amdesc {
-    float: left;
-    width: 50%;
-    text-align: center;
-}
-#ampic {
-    width: 50%;
-    margin: 0 auto;
-}
-
-.aminpic {
-    width: 100%;
-    height: 100%;
-}
-
-#banner {
-    width: 100%;
-    object-fit: cover;
-}
-
-h2 {
-    text-align: center;
-}
-
-a {
-    color: #000000;
-    text-decoration: none;
-}
-
-a:hover {
-    font-weight: 600;
-    color: #1E3A8A;
-    text-decoration: underline;
-}
-
-#am {
-    text-align: center;
-}
-
-#port {
-    display: flex;
-    max-width: 800px;
-    margin: 0 auto;
-    text-align: center;
-    padding: 32px 0;
-}
-
-#description {
-    width: 50%;
-    text-align: center;
-}
-
-.descp {
-    font-size: 2rem;
-    font-family: 'Pacifico';
-    text-decoration: underline;
-    color: #1E3A8A;
-}
-
-#picture {
-    width: 50%;
-    text-align: center;
-}
-
-.portlay {
-    height: 426.63px;
-    border: 16px solid #DBEAFE;
-    border-radius: 5px;
-}
-
-.landlay {
-    height: 320px;
-    border: 16px solid #DBEAFE;
-    border-radius: 5px;
-}
-
-#footers {
-    background-color: #EFF6FF;
-    padding: 8px;
-    margin-top: 32px;
-    text-align: center;
-}
-
-.footer-links {
-    list-style: none;
-}
-
-.footer-links li {
-    display: inline;
-    margin: 16px;
-}
-
-footer {
-    height: 100px;
-    margin: 0;
-    padding: 0;
-}
-
-.copyright {
-    color: #64748B;
-    font-size: .825rem;
-    padding-bottom: 8px;
 }
